fix(arc-1099): move scrollbar styles to object-detail

--- a/src/styles/pages/_object-detail.scss
+++ b/src/styles/pages/_object-detail.scss
@@ -187,8 +187,14 @@ $metadata-collapsed-width: 36vw;
 	&__related {
 		max-width: 100vw;
 
-		.ScrollbarsCustom-TrackY > .ScrollbarsCustom-Thumb {
-			background-color: $neutral !important;
+		.ScrollbarsCustom {
+			width: 100% !important;
+			height: 500px !important;
+			max-height: 100% !important;
+
+			.ScrollbarsCustom-TrackY > .ScrollbarsCustom-Thumb {
+				background-color: $neutral !important;
+			}
 		}
 	}
 
